--- a/taller_1/pom.xml
+++ b/taller_1/pom.xml
@@ -69,6 +69,10 @@
     <groupId>io.quarkus</groupId>
     <artifactId>quarkus-hibernate-orm</artifactId>
     </dependency>
+    <dependency>
+    <groupId>io.quarkus</groupId>
+    <artifactId>quarkus-jdbc-postgresql</artifactId>
+    </dependency>
     </dependencies>
 
     <build>
