--- a/taller_1/src/main/resources/application.properties
+++ b/taller_1/src/main/resources/application.properties
@@ -5,3 +5,4 @@ quarkus.datasource.password=123
 quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5433/taller
 
 quarkus.hibernate-orm.database.generation = update
+quarkus.hibernate-orm.log.sql=true
